[package]

name = "rusty-peg"
version = "0.3.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
description = "A macro for defining PEG parsers"
homepage = "https://github.com/nikomatsakis/rusty-peg"
documentation = "https://github.com/nikomatsakis/rusty-peg/blob/master/README.md"
repository = "https://github.com/nikomatsakis/rusty-peg"
license = "Unlicense"
keywords = ["parser", "PEG"]

[dependencies]

regex = "0.1"